methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:11: error: expected class or object definition
def Marquer(){
^PictureMono1:15: error: expected class or object definition
def FaireV(){
^PictureMono1:29: error: expected class or object definition
for(i <-0 to 3){
^PictureMono1:33: error: Unmatched closing brace '}' ignored here
}
^